# hjzy

./: .gitignore  README.md  readme.md
emotion_inference/: CMakeLists.txt  README.md
emotion_inference/include/: emotion_inference_task.h  emotion_postprocess.h  emotion_preprocess.h  emotion_types.h
emotion_inference/src/: emotion_inference_task.c  emotion_postprocess.c  emotion_preprocess.c
train_emotion_model/: convert_to_tflite.py  emotion_server.py  export_weights.py  prepare_data.py  prepare_fer2013.py  test_model.py  train_emotion.py  train_emotion_torch.py
train_emotion_model/emotion_web/: index.html
